--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ h4,
 h5 {
     letter-spacing: 2px;
 }
+.carousel-item img{
+    height: 60rem;
+   width: 100%;
+   
+}
 
 
 /* back to top button */
