--- a/about.css
+++ b/about.css
@@ -17,6 +17,9 @@
     align-items: center;
     text-align: center;
 }
+.image-class{
+    margin-top: -60%;
+}
 @media(max-width:517px){
     .joseph{
         flex-direction: column;
@@ -34,5 +37,14 @@
     .joseph-p{
         width: 80%;
 
+    }
+    .my-map{
+       padding: 0;
+       margin: 0;
+    }
+    .my-map img{
+        width : 100%;
+        height : 250px;
+        margin : 0; 
     }
 }
