--- a/contact.css
+++ b/contact.css
@@ -12,6 +12,16 @@
     font-size: 4rem;
 }
 
+
+.map{
+ display: flex;
+ justify-content: center;
+ margin : 2rem;
+}
+.map iframe {
+    height:300px;
+}
+
 /* ===================================================== */
 /* social icons */
 .whatsapp {
@@ -146,4 +156,8 @@ p {
           .navbar h1 {
               font-size: 2.5rem;
           }
+          .map iframe {
+            height:200px;
+            width : 90%;
+        }
 }
